# student_backend_v2

./: .gitignore  config.yaml  docker-compose.yaml  pyproject.toml
app/core/: config.py
app/utils/: log.py  profile.py
student_backend_v2/: main.py
tests/core/: test_config.py
