[tool.poetry]
name = "student-backend-v2"
version = "0.1.0"
description = ""
authors = ["BlockZachary <zachary26626@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
