[tool.poetry]
name = "student-backend-v2"
version = "0.1.0"
description = ""
authors = ["BlockZachary <zachary26626@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.12"}
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
